[package]
name = "devtox"
version = "0.1.0"
edition = "2024"

[dependencies]
ratatui = "0.30.0"
color-eyre = "0.6.3"
crossterm = "0.29.0"
jwalk = "0.8.1"
tracing = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
directories = "6.0"

[features]
dev-tracing = ["dep:tracing-subscriber"]

[dependencies.tracing-subscriber]
version = "0.3"
optional = true
features = ["env-filter"]